# collect

./: README.md  collect.cabal  stack.yaml
src/: Collect.hs  Storage.hs
src/Storage/: Object.hs
src/Storage/Object/: Aws.hs
