name:                collect
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/collect#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lib
    , Storage.Object
    , Storage.Object.Aws

  build-depends:
    base >= 4.7 && < 5
    , aws
    , bytestring
    , conduit
    , conduit-extra
    , filepath
    , http-conduit
    --, junit-parser
    , resourcet
    , text
    , transformers
    , unix
    , url
    , xml-conduit

  default-language:    Haskell2010

executable collect-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , collect
  default-language:    Haskell2010

test-suite collect-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , collect
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/collect
